--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,22 +4,12 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.ui.web.WebFragment">
+        tools:context=".presentation.ui.settings.SettingsFragment">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/hello_blank_fragment" />
 
-        <View
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:background="@android:color/holo_red_dark"/>
-
-        <Button
-            android:id="@+id/fragment_web_button_settings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="settings" />
     </FrameLayout>
 </layout>
