feat(settings): Add slider to choose settings button oppacity

--- a/app/src/main/res/layout/fragment_web.xml
+++ b/app/src/main/res/layout/fragment_web.xml
@@ -20,6 +20,7 @@
             android:id="@+id/fragment_web_button_settings"
             android:layout_width="125dp"
             android:layout_height="125dp"
-            android:text="settings" />
+            android:text="settings"
+            android:alpha="@{ viewModel.appState.settingsButtonOpacity / 100F }"/>
     </FrameLayout>
 </layout>
