--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="viewModel"
@@ -57,12 +58,33 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
+            android:id="@+id/fragment_settings_textview_button_opacity_label"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Button opacity"
+            android:layout_marginTop="@dimen/text_std"
+            app:layout_constraintTop_toBottomOf="@id/fragment_settings_textinput_url"
+            app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
+            app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end" />
+
+        <com.google.android.material.slider.Slider
+            android:id="@+id/fragment_settings_slider_button_opacity"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:valueFrom="0"
+            android:valueTo="100"
+            android:value="@={ viewModel.appState.settingsButtonOpacity }"
+            app:layout_constraintTop_toBottomOf="@id/fragment_settings_textview_button_opacity_label"
+            app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
+            app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"/>
+
+        <TextView
             android:id="@+id/fragment_settings_textview_resolution"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/text_std_plus"
             android:layout_marginTop="@dimen/text_std_plus"
-            app:layout_constraintTop_toBottomOf="@id/fragment_settings_textinput_url"
+            tools:text="Device resolution : "
+            app:layout_constraintTop_toBottomOf="@id/fragment_settings_slider_button_opacity"
             app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
             app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
