--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -57,13 +57,47 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/fragment_settings_textinput_button_x_pos"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Button x pos"
+            android:layout_marginTop="@dimen/space_std_plus"
+            app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
+            app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
+            app:layout_constraintTop_toBottomOf="@id/fragment_settings_textinput_url">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/fragment_settings_edittext_button_x_pos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:stringRes="@{ viewModel.appState.settingsButtonXPosition.localizedHorizontal }"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/fragment_settings_textinput_button_y_pos"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Button y pos"
+            android:layout_marginTop="@dimen/space_std_plus"
+            app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
+            app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
+            app:layout_constraintTop_toBottomOf="@id/fragment_settings_textinput_button_x_pos">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/fragment_settings_edittext_button_y_pos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:stringRes="@{ viewModel.appState.settingsButtonYPosition.localizedVertical }"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
         <TextView
             android:id="@+id/fragment_settings_textview_button_opacity_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Button opacity"
-            android:layout_marginTop="@dimen/text_std"
-            app:layout_constraintTop_toBottomOf="@id/fragment_settings_textinput_url"
+            android:layout_marginTop="@dimen/space_std"
+            app:layout_constraintTop_toBottomOf="@id/fragment_settings_textinput_button_y_pos"
             app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
             app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end" />
 
