--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,119 +7,146 @@
             name="viewModel"
             type="com.wappit.quicklauncher.presentation.viewmodel.MainViewModel" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/fragment_settings_main_layout"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="@dimen/space_large">
+        android:layout_height="match_parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/fragment_settings_main_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="@dimen/space_large">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/fragment_settings_guideline_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="@dimen/space_large"/>
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/fragment_settings_guideline_end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_end="@dimen/space_large"/>
-
-        <TextView
-            android:id="@+id/fragment_settings_textview_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/text_large_plus"
-            android:textStyle="bold"
-            android:text="Settings"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/fragment_settings_textinput_url"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="URL"
-            android:layout_marginTop="@dimen/space_std_plus"
-            app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
-            app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
-            app:layout_constraintTop_toBottomOf="@id/fragment_settings_textview_title">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/fragment_settings_edittext_url"
-                android:layout_width="match_parent"
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/fragment_settings_guideline_start"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textUri"
-                android:imeOptions="actionDone"
-                android:text="@={ viewModel.appState.url }" />
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="@dimen/space_large"/>
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/fragment_settings_textinput_button_x_pos"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="Button x pos"
-            android:layout_marginTop="@dimen/space_std_plus"
-            app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
-            app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
-            app:layout_constraintTop_toBottomOf="@id/fragment_settings_textinput_url">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/fragment_settings_edittext_button_x_pos"
-                android:layout_width="match_parent"
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/fragment_settings_guideline_end"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:stringRes="@{ viewModel.appState.settingsButtonXPosition.localizedHorizontal }"/>
-        </com.google.android.material.textfield.TextInputLayout>
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="@dimen/space_large"/>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/fragment_settings_textinput_button_y_pos"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="Button y pos"
-            android:layout_marginTop="@dimen/space_std_plus"
-            app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
-            app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
-            app:layout_constraintTop_toBottomOf="@id/fragment_settings_textinput_button_x_pos">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/fragment_settings_edittext_button_y_pos"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/fragment_settings_textview_title"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:stringRes="@{ viewModel.appState.settingsButtonYPosition.localizedVertical }"/>
-        </com.google.android.material.textfield.TextInputLayout>
+                android:textSize="@dimen/text_large_plus"
+                android:textStyle="bold"
+                android:text="Settings"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start" />
 
-        <TextView
-            android:id="@+id/fragment_settings_textview_button_opacity_label"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Button opacity"
-            android:layout_marginTop="@dimen/space_std"
-            app:layout_constraintTop_toBottomOf="@id/fragment_settings_textinput_button_y_pos"
-            app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
-            app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/fragment_settings_textinput_url"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="URL"
+                android:layout_marginTop="@dimen/space_std_plus"
+                app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
+                app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
+                app:layout_constraintTop_toBottomOf="@id/fragment_settings_textview_title">
 
-        <com.google.android.material.slider.Slider
-            android:id="@+id/fragment_settings_slider_button_opacity"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:valueFrom="0"
-            android:valueTo="100"
-            android:value="@={ viewModel.appState.settingsButtonOpacity }"
-            app:layout_constraintTop_toBottomOf="@id/fragment_settings_textview_button_opacity_label"
-            app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
-            app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"/>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/fragment_settings_edittext_url"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textUri"
+                    android:imeOptions="actionDone"
+                    android:text="@={ viewModel.appState.url }" />
 
-        <TextView
-            android:id="@+id/fragment_settings_textview_resolution"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/text_std_plus"
-            tools:text="Device resolution : "
-            app:layout_constraintTop_toBottomOf="@id/fragment_settings_slider_button_opacity"
-            app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
-            app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/fragment_settings_textinput_button_x_pos"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="Button x pos"
+                android:layout_marginTop="@dimen/space_std_plus"
+                app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
+                app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
+                app:layout_constraintTop_toBottomOf="@id/fragment_settings_textinput_url">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/fragment_settings_edittext_button_x_pos"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:stringRes="@{ viewModel.appState.settingsButtonXPosition.localizedHorizontal }"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/fragment_settings_textinput_button_y_pos"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="Button y pos"
+                android:layout_marginTop="@dimen/space_std_plus"
+                app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
+                app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
+                app:layout_constraintTop_toBottomOf="@id/fragment_settings_textinput_button_x_pos">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/fragment_settings_edittext_button_y_pos"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:stringRes="@{ viewModel.appState.settingsButtonYPosition.localizedVertical }"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/fragment_settings_textview_button_opacity_label"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Button opacity"
+                android:layout_marginTop="@dimen/space_std"
+                app:layout_constraintTop_toBottomOf="@id/fragment_settings_textinput_button_y_pos"
+                app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
+                app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end" />
+
+            <com.google.android.material.slider.Slider
+                android:id="@+id/fragment_settings_slider_button_opacity"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:valueFrom="0"
+                android:valueTo="100"
+                android:stepSize="1"
+                android:value="@={ viewModel.appState.settingsButtonOpacity }"
+                app:layout_constraintTop_toBottomOf="@id/fragment_settings_textview_button_opacity_label"
+                app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
+                app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"/>
+
+            <TextView
+                android:id="@+id/fragment_settings_textview_button_size_label"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Button size"
+                android:layout_marginTop="@dimen/space_std"
+                app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
+                app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
+                app:layout_constraintTop_toBottomOf="@id/fragment_settings_slider_button_opacity"/>
+
+            <com.google.android.material.slider.Slider
+                android:id="@+id/fragment_settings_slider_button_size"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:valueFrom="0"
+                android:valueTo="2"
+                android:stepSize="1"
+                android:value="@={ viewModel.appState.settingsButtonSize }"
+                app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
+                app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
+                app:layout_constraintTop_toBottomOf="@id/fragment_settings_textview_button_size_label"/>
+
+            <TextView
+                android:id="@+id/fragment_settings_textview_resolution"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_large_plus"
+                tools:text="Device resolution : "
+                app:layout_constraintTop_toBottomOf="@id/fragment_settings_slider_button_size"
+                app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
+                app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
