--- a/app/src/main/res/layout/fragment_web.xml
+++ b/app/src/main/res/layout/fragment_web.xml
@@ -20,8 +20,10 @@
 
         <Button
             android:id="@+id/fragment_web_button_settings"
-            android:layout_width="125dp"
-            android:layout_height="125dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:width="@{ (viewModel.appState.settingsButtonSize &lt; 1F) ? @dimen/settings_button_size_s : (viewModel.appState.settingsButtonSize &lt; 2F) ? @dimen/settings_button_size_m : @dimen/settings_button_size_l }"
+            app:height="@{ (viewModel.appState.settingsButtonSize &lt; 1F) ? @dimen/settings_button_size_s : (viewModel.appState.settingsButtonSize &lt; 2F) ? @dimen/settings_button_size_m : @dimen/settings_button_size_l }"
             android:alpha="@{ viewModel.appState.settingsButtonOpacity / 100F }"
             android:text="settings"
             app:layout_constraintBottom_toBottomOf="parent"
