feat(settings): Allow user to switch settings button title and icon visibility

--- a/app/src/main/res/layout/fragment_web.xml
+++ b/app/src/main/res/layout/fragment_web.xml
@@ -25,7 +25,8 @@
             app:width="@{ (viewModel.appState.settingsButtonSize &lt; 1F) ? @dimen/settings_button_size_s : (viewModel.appState.settingsButtonSize &lt; 2F) ? @dimen/settings_button_size_m : @dimen/settings_button_size_l }"
             app:height="@{ (viewModel.appState.settingsButtonSize &lt; 1F) ? @dimen/settings_button_size_s : (viewModel.appState.settingsButtonSize &lt; 2F) ? @dimen/settings_button_size_m : @dimen/settings_button_size_l }"
             android:alpha="@{ viewModel.appState.settingsButtonOpacity / 100F }"
-            android:text="settings"
+            android:text="@{ viewModel.appState.settingsButtonTitleVisibility ? @string/settings_button_title : @string/no_text }"
+            android:drawableStart="@{ viewModel.appState.settingsButtonIconVisibility ? @drawable/ic_settings : @drawable/ic_none }"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
