--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -138,15 +138,39 @@
                 app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
                 app:layout_constraintTop_toBottomOf="@id/fragment_settings_textview_button_size_label"/>
 
+            <CheckBox
+                android:id="@+id/fragment_settings_checkbox_icon_visibility"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Icon visibility"
+                android:layout_marginTop="@dimen/space_std"
+                android:checked="@={ viewModel.appState.settingsButtonIconVisibility }"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
+                app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
+                app:layout_constraintTop_toBottomOf="@id/fragment_settings_slider_button_size" />
+
+            <CheckBox
+                android:id="@+id/fragment_settings_checkbox_title_visibility"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Title visibility"
+                android:layout_marginTop="@dimen/space_std"
+                android:checked="@={ viewModel.appState.settingsButtonTitleVisibility }"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
+                app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
+                app:layout_constraintTop_toBottomOf="@id/fragment_settings_checkbox_icon_visibility" />
+
             <TextView
                 android:id="@+id/fragment_settings_textview_resolution"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_large_plus"
                 tools:text="Device resolution : "
-                app:layout_constraintTop_toBottomOf="@id/fragment_settings_slider_button_size"
                 app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
-                app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"/>
+                app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
+                app:layout_constraintTop_toBottomOf="@id/fragment_settings_checkbox_title_visibility"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
