--- a/app/src/main/res/layout/fragment_web.xml
+++ b/app/src/main/res/layout/fragment_web.xml
@@ -26,7 +26,9 @@
             app:height="@{ (viewModel.appState.settingsButtonSize &lt; 1F) ? @dimen/settings_button_size_s : (viewModel.appState.settingsButtonSize &lt; 2F) ? @dimen/settings_button_size_m : @dimen/settings_button_size_l }"
             android:alpha="@{ viewModel.appState.settingsButtonOpacity / 100F }"
             android:text="@{ viewModel.appState.settingsButtonTitleVisibility ? @string/settings_button_title : @string/no_text }"
+            android:textColor="@color/white"
             android:drawableStart="@{ viewModel.appState.settingsButtonIconVisibility ? @drawable/ic_settings : @drawable/ic_none }"
+            android:drawableEnd="@drawable/ic_none"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
