feat(misc.) Add base translations

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/text_large_plus"
                 android:textStyle="bold"
-                android:text="Settings"
+                android:text="@string/settings_button_title"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start" />
 
@@ -45,7 +45,7 @@
                 android:id="@+id/fragment_settings_textinput_url"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="URL"
+                android:hint="@string/settings_url_field_placeholder"
                 android:layout_marginTop="@dimen/space_std_plus"
                 app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
                 app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
@@ -65,7 +65,7 @@
                 android:id="@+id/fragment_settings_textinput_button_x_pos"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="Button x pos"
+                android:hint="@string/settings_button_x_pos_placeholder"
                 android:layout_marginTop="@dimen/space_std_plus"
                 app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
                 app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
@@ -82,7 +82,7 @@
                 android:id="@+id/fragment_settings_textinput_button_y_pos"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="Button y pos"
+                android:hint="@string/settings_button_y_pos_placeholder"
                 android:layout_marginTop="@dimen/space_std_plus"
                 app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
                 app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
@@ -99,7 +99,7 @@
                 android:id="@+id/fragment_settings_textview_button_opacity_label"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Button opacity"
+                android:text="@string/settings_button_oppacity_placeholder"
                 android:layout_marginTop="@dimen/space_std"
                 app:layout_constraintTop_toBottomOf="@id/fragment_settings_textinput_button_y_pos"
                 app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
@@ -121,7 +121,7 @@
                 android:id="@+id/fragment_settings_textview_button_size_label"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Button size"
+                android:text="@string/settings_button_size_placeholder"
                 android:layout_marginTop="@dimen/space_std"
                 app:layout_constraintStart_toStartOf="@id/fragment_settings_guideline_start"
                 app:layout_constraintEnd_toEndOf="@id/fragment_settings_guideline_end"
@@ -143,7 +143,7 @@
                 android:id="@+id/fragment_settings_checkbox_icon_visibility"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Icon visibility"
+                android:text="@string/settings_button_icon_visibility"
                 android:layout_marginTop="@dimen/space_std"
                 android:checked="@={ viewModel.appState.settingsButtonIconVisibility }"
                 app:layout_constraintHorizontal_bias="0"
@@ -155,7 +155,7 @@
                 android:id="@+id/fragment_settings_checkbox_title_visibility"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Title visibility"
+                android:text="@string/settings_button_title_visibility"
                 android:layout_marginTop="@dimen/space_std"
                 android:checked="@={ viewModel.appState.settingsButtonTitleVisibility }"
                 app:layout_constraintHorizontal_bias="0"
